# python-grpc

./: README.md  docker-compose.yaml  kubernetes.yaml
auth/: Dockerfile  go.mod  go.sum  main.go  pb_gen.sh
auth/pb/: auth.pb.go  auth_grpc.pb.go  recommendations.pb.go  recommendations_grpc.pb.go
inventory/: go.mod  go.sum  main.go  pb_gen.sh
inventory/pb/: inventory.pb.go  inventory_grpc.pb.go
kubernetes/: auth-deployment.yaml  auth-service.yaml  firebase-config.yaml  inventory-deployment.yaml  inventory-service.yaml  marketplace-deployment.yaml  marketplace-service.yaml  recommendations-deployment.yaml  recommendations-service.yaml
marketplace/: Dockerfile  Makefile  auth.py  auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  inventory_pb2.py  inventory_pb2.pyi  inventory_pb2_grpc.py  marketplace.py  mypy.ini  pb_gen.sh  pip-install.sh  project.toml  pyproject.toml  requirements.txt
marketplace/marketplace/: marketplace.py
marketplace/marketplace/templates/: homepage.html
marketplace/templates/: homepage.html
marketplace/tests/: test_marketplace.py
online_book/: pyproject.toml
online_book/online_book/recommendations/: recommendations.py
online_book/tests/: test_online_book.py
protobufs/: auth.proto  inventory.proto  recommendations.proto
recommendations/: Dockerfile  Makefile  pb_gen.sh  pip-install.sh  project.toml  pyproject.toml  recommendations.py  recommendations_test.py  requirements.txt
recommendations/tests/: test_recommendations.py
