[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = ""
authors = ["Emura Keisuke <kisk.emura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
grpcio-tools = "^1.37.0"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
