[tool.poetry]
name = "online_book"
version = "0.1.0"
description = ""
authors = ["Emura Keisuke <emura.keisuke@panair.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^20.8b1"
grpcio-tools = "^1.37.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
